updating read me